@@ -1,3 +1,5 @@
+- Fix support-free units being disbanded on bankruptcy while aggressively_penalize_bankruptcy is set
+
 * RELEASE 25 PREVIEW 1
 - Increase city limit to 2048
   - Setting named lift_city_limit, included in new "Limits Removed" section with other limit increases/removals
